test/studies/hpcc/RA/bradc/ra-bradc-badlineno.good
Error: Type mismatch in conditional expression (ra-bradc-badlineno.chpl:56)